buil github page

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "https://maycoldsm1234.github.io/platzi/curso-intro-react"
+  "homepage": "https://maycoldsm1234.github.io/curso-intro-react"
 }
